--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@types/node": "20.4.9",
     "@types/react": "18.2.19",
     "@types/react-dom": "18.2.7",
+    "ai": "^2.1.32",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
+    "io": "^1.5.0",
     "lucide-react": "^0.265.0",
     "next": "13.4.13",
+    "openai-edge": "^1.2.2",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
